Update changes log and slight fix for participants on Firefox to only show a scroll bar when actually needed.

--- a/style/essential.css
+++ b/style/essential.css
@@ -23462,7 +23462,7 @@ div.dropdown-menu > ul li a {
 }
 #custom_menu_participants .participants {
   max-height: 108px;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 #page-mod-forum-view .notification.unread {
   background-color: inherit;
